{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 107,
  "lineage": "b9fd9d92-d68e-c72c-77c2-db68cc334cb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleController",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0f4c27376f8aa79",
            "arn": "arn:aws:ec2:us-east-2:103109725432:instance/i-07b01638a3b70164c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b01638a3b70164c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e9be20052d1de552",
            "private_dns": "ip-172-20-10-188.us-east-2.compute.internal",
            "private_ip": "172.20.10.188",
            "public_ip": "13.59.30.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d04aec79fa66cb27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02146e8c2013910fc",
            "tags": {
              "Name": "Ansible-ControlNode"
            },
            "tags_all": {
              "Name": "Ansible-ControlNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010b0fa2d09fcbf1f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleMN-DockerHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0f4c27376f8aa79",
            "arn": "arn:aws:ec2:us-east-2:103109725432:instance/i-04a51d473a1eabeaa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a51d473a1eabeaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5e06cf220a65b6d",
            "private_dns": "ip-172-20-10-14.us-east-2.compute.internal",
            "private_ip": "172.20.10.14",
            "public_ip": "3.140.245.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ddb8f1639ead83c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02146e8c2013910fc",
            "tags": {
              "Name": "AnsibleMN-DockerHost"
            },
            "tags_all": {
              "Name": "AnsibleMN-DockerHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010b0fa2d09fcbf1f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleManagedNode1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0f4c27376f8aa79",
            "arn": "arn:aws:ec2:us-east-2:103109725432:instance/i-0ac9d5268845d41af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac9d5268845d41af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7d73d6cf337d425",
            "private_dns": "ip-172-20-10-197.us-east-2.compute.internal",
            "private_ip": "172.20.10.197",
            "public_ip": "3.17.158.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc36590b90f631e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02146e8c2013910fc",
            "tags": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tags_all": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010b0fa2d09fcbf1f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0f4c27376f8aa79",
            "arn": "arn:aws:ec2:us-east-2:103109725432:instance/i-0a174a69090160a3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a174a69090160a3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a5996dfdbc2bd771",
            "private_dns": "ip-172-20-10-134.us-east-2.compute.internal",
            "private_ip": "172.20.10.134",
            "public_ip": "18.224.172.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0930da917dd7e60b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02146e8c2013910fc",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010b0fa2d09fcbf1f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0f4c27376f8aa79",
            "arn": "arn:aws:ec2:us-east-2:103109725432:instance/i-0c7d9ad6a05677009",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7d9ad6a05677009",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b68e5501a47d94ec",
            "private_dns": "ip-172-20-10-18.us-east-2.compute.internal",
            "private_ip": "172.20.10.18",
            "public_ip": "18.188.210.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0edb5cec98d0e5d4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02146e8c2013910fc",
            "tags": {
              "Name": "Nexus-Server"
            },
            "tags_all": {
              "Name": "Nexus-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010b0fa2d09fcbf1f"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyLab-IntGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:103109725432:internet-gateway/igw-0d0ff02d1a534ef53",
            "id": "igw-0d0ff02d1a534ef53",
            "owner_id": "103109725432",
            "tags": {
              "Name": "MyLab-InternetGW"
            },
            "tags_all": {
              "Name": "MyLab-InternetGW"
            },
            "vpc_id": "vpc-058db02aa883f6a6b"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyLab_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:103109725432:route-table/rtb-07ec486cac870f24f",
            "id": "rtb-07ec486cac870f24f",
            "owner_id": "103109725432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0ff02d1a534ef53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyLab_Routetable"
            },
            "tags_all": {
              "Name": "MyLab_Routetable"
            },
            "vpc_id": "vpc-058db02aa883f6a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyLab_Assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0707a890a83c0a74c",
            "route_table_id": "rtb-07ec486cac870f24f",
            "subnet_id": "subnet-02146e8c2013910fc"
          },
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_route_table.MyLab_RouteTable",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyLab_Sec_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:103109725432:security-group/sg-010b0fa2d09fcbf1f",
            "description": "To allow inbound and outbound traffic to mylab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010b0fa2d09fcbf1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "MyLab Security Group",
            "name_prefix": "",
            "owner_id": "103109725432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-058db02aa883f6a6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyLab-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:103109725432:subnet/subnet-02146e8c2013910fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-02146e8c2013910fc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103109725432",
            "tags": {
              "Name": "MyLab-Subnet1"
            },
            "tags_all": {
              "Name": "MyLab-Subnet1"
            },
            "vpc_id": "vpc-058db02aa883f6a6b"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyLab-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:103109725432:vpc/vpc-058db02aa883f6a6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-088b237ca307ef13a",
            "default_route_table_id": "rtb-08f435de4a16f2132",
            "default_security_group_id": "sg-05bcb74b2dafff2e6",
            "dhcp_options_id": "dopt-e300bd88",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058db02aa883f6a6b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08f435de4a16f2132",
            "owner_id": "103109725432",
            "tags": {
              "Name": "MyLab-VPC"
            },
            "tags_all": {
              "Name": "MyLab-VPC"
            }
          }
        }
      ]
    }
  ]
}